--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+.swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    background-color: #D1D5DB; /* gray-300 */
+    opacity: 1;
+    border-radius: 9999px;
+    cursor: pointer;
+}
+.swiper-pagination-bullet-active {
+    background-color: #4ADE80; /* green-400 */
+}
